--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -4,11 +4,13 @@ spring:
     username: root
     password: 123456789
     url: jdbc:mysql://127.0.0.1:3306/mall?characterEncoding=utf-8&useSSL=false
-
 server:
   port: 8880
 
 mybatis:
   configuration:
     map-underscore-to-camel-case: true
+    ## 控制台日志配置
+    log-impl: org.apache.ibatis.logging.stdout.StdOutImpl
   mapper-locations: classpath:mappers/*.xml
+
