--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -6,6 +6,9 @@ spring:
     url: jdbc:mysql://127.0.0.1:3306/mall?characterEncoding=utf-8&useSSL=false
 server:
   port: 8880
+  servlet:
+    session:
+      timeout: 120
 
 mybatis:
   configuration:
